// Copyright 2022 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.devicetrust.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/devicetrust/v1;devicetrustv1";

// DeviceEnrollToken encapsulates the permission, granted by a device
// administrator to an user, to enroll a device.
// An enrolled device allows its user to perform device-aware actions.
message DeviceEnrollToken {
  // Opaque enrollement token required by the EnrollDevice RPC.
  string token = 1;

  // Expiration time for the token.
  google.protobuf.Timestamp expire_time = 2;
}
